fixed weird text aligning

--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ p {
 
 p2 {
     color: white;
-    margin-left: 30px;
-    margin-top: 30px;
-    margin-right: 30px;
+    text-align: center;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
 }
